clusters/my-cluster/simple-front/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: simple-front
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: simple-front-canary
      stableService: simple-front-stable
      trafficRouting:
        nginx:
          stableIngress: simple-front-stable
      steps:
        - setWeight: 60
        - pause: {}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: simple-front
  template:
    metadata:
      labels:
        app: simple-front
    spec:
      containers:
        - name: simple-front
          image: ghcr.io/davidhaioum/simple-front:main-202401030922-d489f7a # {"$imagepolicy": "simple-front:simple-front"}
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz/liveness
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz/readiness
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 3
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
      imagePullSecrets:
        - name: regcred
