clusters/my-cluster/simple-front/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-front-stable
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: simple-front
