clusters/my-cluster/simple-front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-front-stable
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: simple-front.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: simple-front-stable
                port:
                  number: 80
